--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "clientjs": "^0.1.11",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-scripts": "2.0.4",
+    "redux": "^4.0.0",
     "stats.js": "^0.17.0",
     "three": "^0.97.0",
     "three-dragcontrols": "^0.88.2",
