--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "react-sample4",
+  "name": "floor-planner",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://atul-mourya.github.io/floor-planner/",
   "dependencies": {
     "clientjs": "^0.1.11",
+    "gh-pages": "^4.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
@@ -18,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
